# uotp

./: .gitignore  README.md  package-lock.json
backend/: .coverage  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_foundation.py  0002_issues_core.py  0003_sla_rules.py  0004_notifications.py  0005_sla_values_search_indexes.py  0006_audit_log.py  0007_v3_task_model.py  0008_sphere_controller.py
backend/app/: config.py  db.py  deps.py  i18n.py  main.py  ratelimit.py  redis.py  scheduler.py  security.py  seed.py
backend/app/middleware/: tenant.py
backend/app/modules/audit/: models.py  router.py  schemas.py  service.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/catalog/: models.py  router.py  schemas.py
backend/app/modules/dashboard/: router.py  schemas.py  service.py
backend/app/modules/issues/: models.py  router.py  schemas.py  service.py  state.py  storage.py
backend/app/modules/map/: router.py  schemas.py  service.py
backend/app/modules/notifications/: models.py  push.py  router.py  schemas.py  service.py
backend/app/modules/roles/: models.py  router.py  schemas.py  service.py
backend/app/modules/sla/: models.py  router.py  schemas.py  service.py
backend/app/modules/tenants/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_dashboard_service.py  test_integration_v3.py  test_issue_numbering.py  test_issue_rbac.py  test_issue_state.py  test_map_service.py  test_notifications_service.py  test_security_auth.py  test_sla_service.py  test_storage_validation.py  test_voice_service.py
backend/uotp_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+78 files in other folders)
