[project]
name = "uotp-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "apscheduler>=3.10.4",
  "asyncpg>=0.29.0",
  "bcrypt<4.1",
  "email-validator>=2.2.0",
  "fastapi>=0.111.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.3.4",
  "pyjwt>=2.8.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.7",
  "sqlalchemy[asyncio]>=2.0.31",
  "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
